(fix): Added <figure> tag to wrappe images on page header component

--- a/ts/src/app/components/page-header/page-header.component.scss
+++ b/ts/src/app/components/page-header/page-header.component.scss
@@ -31,12 +31,12 @@
     .language-button {
         width: 6.06rem;
         height: 2.12rem;
-        margin-right: -14rem;
         cursor: pointer;
     }
 
     .welcome-image-and-greetings {
         margin-right: 2.25rem;
+        margin-left: -15rem;
         cursor: pointer;
     }
 }
